# OnlineSchoolHelper

./: .flake8  .gitignore  Makefile  README.md  app.py  database.sql  pyproject.toml
.github/workflows/: linter.yml  vibe-check.yml
converter/: __init__.py  app.py  database.py  question_logic.py  questions.py  students.py  utils.py
converter/templates/: absent_list.html  create_feedback.html  create_group.html  feedback.html  feedback_result.html  index.html  layout.html  list_groups.html  result.html  result_test.html  view_group.html  view_student.html
osh/: __init__.py  app.py  database.py  feedback.py  groups.py  messenger.py  students.py  utility.py
osh/database/: database.py  db_groups.py  db_students.py
osh/database/sections/: db_feedback.py  db_groups.py  db_stats.py  db_students.py
osh/feedback/: feedback.py
osh/feedback/templates/: feedback.html  feedback_result.html
osh/feedback/utility/: feedback_utility.py
osh/groups/: groups.py  groups_utility.py
osh/groups/templates/: group_create.html  group_list.html  group_view.html
osh/groups/utility/: groups_utility.py
osh/numbers/: numbers.py  numbers_utility.py
osh/numbers/templates/: numbers.html
osh/numbers/utility/: numbers_utility.py
osh/statistics/: stats.py  stats_utility.py
osh/statistics/templates/: stats.html  total_stats.html
osh/statistics/utility/: stats_utility.py
osh/students/: students.py  students_utility.py
osh/students/templates/: student_absent.html  student_view.html  (+2 more)
osh/templates/: error.html  generator.html  index.html  layout.html
templates/: index.html
(+15 files in other folders)
